<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#223f71">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="165dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="174dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="13dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            style="@style/viewCustom"
            android:background="@drawable/btn_rounded"
            android:ems="20"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/et_password"
            style="@style/viewCustom"
            android:background="@drawable/btn_rounded"
            android:ems="20"
            android:hint="@string/etPassword"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="434dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_register_account"
            style="@style/viewCustom"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="307dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/create_act"
            android:textColor="@color/colorBtn"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login"
            style="@style/viewCustom"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="@string/login_title"
            android:textColor="@color/colorBtn"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>


